# ArcMail

./: .gitignore  CLAUDE.md
.github/workflows/: build.yml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: ai.rs  autodiscover.rs  commands.rs  crypto.rs  db.rs  lib.rs  rules.rs  shortcuts.rs
frontend/src-tauri/src/email/: imap.rs  mod.rs  parser.rs  pop3.rs  smtp.rs
frontend/src/components/: AIPanel.tsx  AccountForm.tsx  CommandBar.tsx  ComposeModal.tsx  EmailList.tsx  EmailView.tsx  SearchBar.tsx  Settings.tsx  Sidebar.tsx  StatusBar.tsx
frontend/src/lib/: tauri.ts
frontend/src/store/: emailStore.ts  settingsStore.ts
